--- a/index.html
+++ b/index.html
@@ -663,7 +663,7 @@
             <!--- Timeline content 1 start -->
             <div id="parish_1780_1789" class="tm-content-row active content-popup-wrapper">
               <a href="#" alt="Timeline-content" data-toggle="modal" data-target="#tm-Modal1">
-                <img src="images/timeline-images/1780_RoadToDorchester_byDesBarres.png" alt="A 1781 View of Boston from the Road to Dorchester by artist Des Barres." />
+                <img src="images/timeline-images/1780_HolyCross_interior.jpg" alt="A rare interior view of the original Cathedral of the Holy Cross, before it was demolished in the 1860s for a larger South End replacement." />
                 <div class="button-container">
                   <button class="slideshow-btn btn site-button">
                     <i class="fa fa-clone btn-icon" aria-hidden="true"></i>
@@ -671,7 +671,7 @@
                   </button>
                 </div>
               </a>
-              <div class="tm-slideshow-caption">The Massachusetts constitution legalizes Catholicism in 1780.</div>
+              <div class="tm-slideshow-caption">1780 to 1789</div>
               <!-- Modal -->
               <div class="modal fade" id="tm-Modal1" role="dialog">
                 <div class="modal-dialog">
@@ -679,7 +679,7 @@
                   <div class="modal-content">
                     <div class="modal-header">
                       <button type="button" class="close" data-dismiss="modal">&times;</button>
-                      <h5 class="modal-title">Put some Title here</h5>
+                      <h5 class="modal-title">1780 to 1789</h5>
                     </div>
 
                     <div class="modal-body">
@@ -689,7 +689,7 @@
                             <!-- Wrapper for slides -->
                             <div class="carousel-inner" role="listbox">
                               <div class="item active">
-                                <img src="images/timeline-images/1780_HolyCross_interior.jpg" alt="A rare interior view of the original Cathedral of the Holy Cross, before it was demolished in the 1860s when the larger South End building of the same name was constructed."/>
+                                <img src="images/timeline-images/1780_HolyCross_interior.jpg" alt="A rare interior view of the original Cathedral of the Holy Cross, before it was demolished in the 1860s for a larger South End replacement."/>
                               </div>
                               <div class="item">
                                 <img src="images/timeline-images/1780_RoadToDorchester_byDesBarres.png" alt="A 1781 View of Boston from the Road to Dorchester by artist Des Barres."/>
@@ -730,7 +730,7 @@
             <!--- Timeline content 2 start -->
             <div id="parish_1790_1799" class="tm-content-row content-popup-wrapper">
               <a href="#" alt="Timeline-content" data-toggle="modal" data-target="#tm-Modal2">
-                <img src="images/timeline-images/timeline-image2.jpg" alt="Lowell Bott Mill" />
+                <img src="images/timeline-images/1790_FaneuilHall.jpg" alt="Illustration of Faneuil Hall as it appeared in the 1790s." />
                 <div class="button-container">
                   <button class="slideshow-btn btn site-button">
                     <i class="fa fa-clone btn-icon" aria-hidden="true"></i>
@@ -738,7 +738,7 @@
                   </button>
                 </div>
               </a>
-              <div class="tm-slideshow-caption">Catholics remain scattered across eastern Massachusetts.</div>
+              <div class="tm-slideshow-caption">1790 to 1799</div>
               <!-- Modal -->
               <div class="modal fade" id="tm-Modal2" role="dialog">
                 <div class="modal-dialog">
@@ -746,7 +746,7 @@
                   <div class="modal-content">
                     <div class="modal-header">
                       <button type="button" class="close" data-dismiss="modal">&times;</button>
-                      <h5 class="modal-title">Put some Title here</h5>
+                      <h5 class="modal-title">1790 to 1799</h5>
                     </div>
 
                     <div class="modal-body">
@@ -756,10 +756,10 @@
                             <!-- Wrapper for slides -->
                             <div class="carousel-inner" role="listbox">
                               <div class="item active">
-                                <img src="images/timeline-images/timeline-image2.jpg" alt="timeline-image1"/>
+                                <img src="images/timeline-images/1790_FaneuilHall.jpg" alt="Illustration of Faneuil Hall as it appeared in the 1790s."/>
                               </div>
                               <div class="item">
-                                <img src="images/timeline-images/timeline-image3.jpg" alt="timeline-image2"/>
+                                <img src="images/timeline-images/1790_BostonHarbor.jpg" alt="A view of Boston Harbor in 1790."/>
                               </div>
                             </div>
                             <!-- Indicators -->
@@ -799,7 +799,7 @@
             <!--- Timeline content 3 start -->
             <div id="parish_1800_1809" class="tm-content-row content-popup-wrapper">
               <a href="#" alt="Timeline-content" data-toggle="modal" data-target="#tm-Modal3">
-                <img src="images/timeline-images/timeline-image3.jpg" alt="Lowell Bott Mill" />
+                <img src="images/timeline-images/1800_StateSt_byJamesBrownMarston.png" alt="An 1801 painting of State Street by James Brown Marston." />
                 <div class="button-container">
                   <button class="slideshow-btn btn site-button">
                     <i class="fa fa-clone btn-icon" aria-hidden="true"></i>
@@ -807,7 +807,7 @@
                   </button>
                 </div>
               </a>
-              <div class="tm-slideshow-caption">Leading Protestant public figures and families</div>
+              <div class="tm-slideshow-caption">1800 to 1809</div>
               <!-- Modal -->
               <div class="modal fade" id="tm-Modal3" role="dialog">
                 <div class="modal-dialog">
@@ -815,7 +815,7 @@
                   <div class="modal-content">
                     <div class="modal-header">
                       <button type="button" class="close" data-dismiss="modal">&times;</button>
-                      <h5 class="modal-title">Put some Title here</h5>
+                      <h5 class="modal-title">1800 to 1809</h5>
                     </div>
 
                     <div class="modal-body">
@@ -825,11 +825,13 @@
                             <!-- Wrapper for slides -->
                             <div class="carousel-inner" role="listbox">
                               <div class="item active">
-                                <img src="images/timeline-images/timeline-image3.jpg" alt="timeline-image1"/>
+                                <img src="images/timeline-images/1800_StateSt_byJamesBrownMarston.png" alt="An 1801 painting of State Street by James Brown Marston."/>
+                              <!-- commented out for lack of second image for this section, add back in if find another one
                               </div>
                               <div class="item">
                                 <img src="images/timeline-images/timeline-image4.jpg" alt="timeline-image2"/>
                               </div>
+                              -->  
                             </div>
                             <!-- Indicators -->
                             <ol class="carousel-indicators">
@@ -869,7 +871,7 @@
             <!--- Timeline content 4 start -->
             <div id="parish_1810_1819" class="tm-content-row content-popup-wrapper">
               <a href="#" alt="Timeline-content" data-toggle="modal" data-target="#tm-Modal4">
-                <img src="images/timeline-images/timeline-image4.jpg" alt="Lowell Bott Mill" />
+                <img src="images/timeline-images/1810_BeaconHill.jpg" alt="A view of Boston's Beacon Hill neighborhood in the 1810s." />
                 <div class="button-container">
                   <button class="slideshow-btn btn site-button">
                     <i class="fa fa-clone btn-icon" aria-hidden="true"></i>
@@ -877,7 +879,7 @@
                   </button>
                 </div>
               </a>
-              <div class="tm-slideshow-caption">Aenean vulputate enim eu massa euismod sodales.</div>
+              <div class="tm-slideshow-caption">1810 to 1819</div>
               <!-- Modal -->
               <div class="modal fade" id="tm-Modal4" role="dialog">
                 <div class="modal-dialog">
@@ -885,7 +887,7 @@
                   <div class="modal-content">
                     <div class="modal-header">
                       <button type="button" class="close" data-dismiss="modal">&times;</button>
-                      <h5 class="modal-title">Put some Title here</h5>
+                      <h5 class="modal-title">1810 to 1819</h5>
                     </div>
 
                     <div class="modal-body">
@@ -895,10 +897,13 @@
                             <!-- Wrapper for slides -->
                             <div class="carousel-inner" role="listbox">
                               <div class="item active">
-                                <img src="images/timeline-images/timeline-image4.jpg" alt="timeline-image1"/>
+                                <img src="images/timeline-images/1810_BeaconHill.jpg" alt="A view of Boston's Beacon Hill neighborhood in the 1810s."/>
                               </div>
                               <div class="item">
-                                <img src="images/timeline-images/timeline-image5.jpg" alt="timeline-image2"/>
+                                <img src="images/timeline-images/1810_BostonMap.jpg" alt="A map of Boston in 1814, with fainter lines for later developments."/>
+                              </div>
+                              <div class="item">
+                                <img src="images/timeline-images/1810_BMC.jpg" alt="Francis Cabot Lowell's Boston Manufacturing Company in the 1810s, along the Charles River in Waltham, Massachusetts."/>
                               </div>
                             </div>
                             <!-- Indicators -->
