--- a/index.html
+++ b/index.html
@@ -1110,7 +1110,7 @@
                                 <img src="images/timeline-images/1840_IrishFamineMemorialBoston.jpg" alt="A memorial to the Irish famine in Boston displays both the suffering endured by many (right) and the hope of those who immigrated to find a different life (left)."/>
                               </div>
                               <div class="item">
-                                <img src="images/timeline-images/1840_DorcesterHeights.jpg" alt="A painted view of Dorchester Heights in Boston in the 1840s."/>
+                                <img src="images/timeline-images/1840_DorcesterHeights.jpeg" alt="A painted view of Dorchester Heights in Boston in the 1840s."/>
                               </div>
                             </div>
                             <!-- Indicators -->
