--- a/index.html
+++ b/index.html
@@ -89,8 +89,8 @@
           <!-- Image -->
           <div class="image-container relative">
             <!-- Hero Images -->
-            <div class="bg-image banner--image-start" style="background: url(images/banner-faded.jpg) no-repeat; background-size: cover; background-position: center center;"></div>
-            <div class="bg-image banner--image-end" style="background: url(images/banner.jpg) no-repeat; background-size: cover; background-position: center center;"></div>
+            <div class="bg-image banner--image-start" style="background: url(images/arch_main1.jpg) no-repeat; background-size: cover; background-position: center center;"></div>
+            <div class="bg-image banner--image-end" style="background: url(images/arch_main2.jpg) no-repeat; background-size: cover; background-position: center center;"></div>
             <!-- End Hero Images -->
           </div>
           <!-- End Image -->
