--- a/index.html
+++ b/index.html
@@ -643,7 +643,9 @@
 
         <!-- Header -->
         <h1 class="header section-title">Growth of the Catholic Church in Greater Boston</h1>
-        <h6 class="note">Click or drag along the timeline to see the parish growth in Greater Boston from the earliest records through 1900. Click each gold pointer on the map to see more information on individual parishes. Expand the slideshow on the right to see and read more about the historical moments in the Boston Catholic community.</h6>
+        <p>Click or drag along the timeline to see the parish growth in Greater Boston from the earliest records through 1900.</p>
+        <p>Click each gold pointer on the map to see more information on individual parishes.</p>
+        <p>Expand the slideshow on the right to see and read more about the historical moments in the Boston Catholic community.</p>
         <!--Catholic church block Area-->
 
         <div id="catholic-church-block" class="row cath-church-elments-wrapper">
@@ -1471,15 +1473,12 @@
               </div>
               <!-- END Modal -->
             </div>
-            <!--- End of Timeline content 12 -->
-
-
+            <!--- End of Timeline content 12--->
           </div>
         </div>
         <div id="timeline-container" class="row timeline-wrapper">
           <input type="text" class="span2" value="" data-slider-min="1780" data-slider-max="1900" data-slider-step="1" id="B" />
         </div>
-
         <!--End Catholic church block Area-->
 
       </div>
@@ -1488,8 +1487,8 @@
     </section>
     <!--End Catholic Church Section-->
 
-   <!-- Header -->
-        <h1 class="header section-title">Resistance to Catholicism</h1>
+    <!--Resistance to Catholicism Section-->
+    <section id="resistance-catholicism" class="container">
 
         <p class="text-bold t-center">It wasn't easy being Catholic in the Massachusetts Bay Colony.</p>
         <p>The Puritans came to reside in Boston, Salem, and the surrounding area by 1630, and they brought with them <span class="underline">strong anti-Catholic sentiment</span>. They objected to the perceived corruption and ostentatious pageantry of the Catholic Church back in Europe, and they especially distrusted any hint of allegiance to the Pope.</p>
@@ -1598,7 +1597,7 @@
             <p>Considered the "cradle of the American Industrial Revolution," Lowell is named after the textile merchant who brought power looms to the area in the 1820's. The construction of dams to harness the river's energy and the proliferation of manufacturing in the area coincided with early waves of immigrant groups seeking work, mostly French Canadian, Irish, and German Catholics. The majority of the textile workforce in particular were women and young girls.</p>
             <p>As industry grew, the organization of society changed, too. Densely-populated ethnic neighborhoods replaced company-owned boarding houses, and churches became the hearts of their communities for politics and recreation as much as worship.</p>
             <p>The growth of the church is visible with the increase of parishes in the region during the decades when it was the industrial bedrock of the United States. Victories or setbacks in one area of life had implications in others.</p>
-            <p>​Catholics, alongside other laboring immigrant and minority groups, struggled as much for freedom from discrimination as they did for fair pay, overtime, and educational opportunities. In this way, the effort for religious acceptance by a once-outlawed demographic was inextricably linked with the origins of a national movement towards organized labor.</p>
+            <p>Catholics, alongside other laboring immigrant and minority groups, struggled as much for freedom from discrimination as they did for fair pay, overtime, and educational opportunities. In this way, the effort for religious acceptance by a once-outlawed demographic was inextricably linked with the origins of a national movement towards organized labor.</p>
           </section>
         </article>
 
