--- a/index.html
+++ b/index.html
@@ -117,8 +117,7 @@
 
             <!-- Home Fixed Text -->
             <p class="home-fixed-text white thin">THE HISTORIC LEGACY OF<br/>BOSTON'S CATHOLIC COMMUNITY</p>
-            <p>ꜜ</p>
-            <p><bounce>&#11015;</bounce></p>
+            <div class="arrow bounce"></div>
 
           </div>
           <!-- End Home Text Slider -->
