--- a/index.html
+++ b/index.html
@@ -614,19 +614,15 @@
         <h1 class="header section-title">CATHOLICS IN THE BAY COLONY</h1>
         <!-- Header Text -->
         <p class="text-bold t-center light animated" data-animation="fadeIn" data-animation-delay="200">
-          While the Massachusetts Bay Colony was famously established by English Protestants, there is evidence of Catholic influence in the New England area as early as the 17th century. Starting in 1603, French colonists established settlements at the St. Croix River and explored as far south as Cape Cod
+          While the Massachusetts Bay Colony was famously established by English Protestants, there is evidence of Catholic influence in the New England area as early as the 17th century. Starting in 1603, French colonists established settlements at the St. Croix River and explored as far south as Cape Cod.
         </p>
         <p>
-          Ultimately, the majority of French immigrants settled further north in Canada, ​While the Massachusetts Bay Colony was famously established by English Protestants, <span class="underline">there is evidence of Catholic influence in the New England area as early as the 17th century</span>. Starting in 1603, French colonists established settlements at the St. Croix River and explored as far south as Cape Cod.
+         Ultimately, the majority of French immigrants settled further north in Canada, but these early ties to New England would set the stage for future relationships in the Catholic community.</p>
           <span class="floated-box f-left">
             <img src="images/baycolony.gif" alt="Bay Colony"/>
-            <span class="image-caption-content t-center">While the Massachusetts Bay Colony was famously established by English Protestants, there is evidence of Catholic influence in the New England area as early as the 17th century.</span>
+            <span class="image-caption-content t-center">A map of early Massachusetts Bay and Cape Cod Bay areas.</span>
           </span>
-          Ultimately, the majority of French immigrants settled further north in Canada, but these early ties to New England would set the stage for future relationships in the Catholic community.
-        </p>
-
-        <p>
-          The Irish also had a small early presence in New England, long before the first major wave of Irish immigration, thanks to trans-Atlantic maritime trade. <span class="underline">During the 17th and 18th centuries, while there was little direct trade between Ireland and New England, ports in both places served as centers of trade and convenient stops for ships bound elsewhere. No major Irish settlements appeared in New England at this time, but Irish Catholic sailors found themselves scattered up and down the coast</span>. In addition, many Irish immigrated to America after the unsuccessful rebellion of 1798, when they fled Ireland out of fear of reprisal or punishment by the British government, including being transported as convicts to Australia
+          <p>The Irish also had a small early presence in New England, long before the first major wave of Irish immigration, thanks to trans-Atlantic maritime trade. During the 17th and 18th centuries, while there was little direct trade between Ireland and New England, ports in both places served as centers of trade and convenient stops for ships bound elsewhere. No major Irish settlements appeared in New England at this time, but Irish Catholic sailors found themselves scattered up and down the coast. In addition, many Irish immigrated to America after the unsuccessful rebellion of 1798, when they fled Ireland out of fear of reprisal or punishment by the British government, including being transported as convicts to Australia.
         </p>
       </div>
       <!-- End Catholic in the Bay colony Inner -->
