--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
 
             <!-- Home Fixed Text -->
             <p class="home-fixed-text white thin">THE HISTORIC LEGACY OF<br/>BOSTON'S CATHOLIC COMMUNITY</p>
-            <div class="arrow bounce"></div>
+            <a href="#introduction"><div class="arrow bounce"></div></a>
 
           </div>
           <!-- End Home Text Slider -->
@@ -638,9 +638,7 @@
 
         <!-- Header -->
         <h1 class="header section-title">Growth of the Catholic Church in Greater Boston</h1>
-        <p>Click or drag along the timeline to see the parish growth in Greater Boston from the earliest records through 1900.</p>
-        <p>Click each gold pointer on the map to see more information on individual parishes.</p>
-        <p>Expand the slideshow on the right to see and read more about the historical moments in the Boston Catholic community.</p>
+        <p class="text-bold t-center light animated" data-animation="fadeIn" data-animation-delay="200">Drag along the timeline to see the parish growth in Greater Boston from the earliest records through 1900. Zoom in on the map and click each gold pointer on the map to see more aboutindividual parishes. Explore the slideshow to see more detail about key moments in the history of the Boston Catholic community.</p>
         <!--Catholic church block Area-->
 
         <div id="catholic-church-block" class="row cath-church-elments-wrapper">
