--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
 
             <!-- Home Fixed Text -->
             <p class="home-fixed-text white thin">THE HISTORIC LEGACY OF<br/>BOSTON'S CATHOLIC COMMUNITY</p>
-            <a href="#introduction"><div class="arrow bounce"></div></a>
+            <li class="dropdown-toggle nav-toggle"><a href="#introduction"><div class="arrow bounce"></div></a></li>
 
           </div>
           <!-- End Home Text Slider -->
