--- a/index.html
+++ b/index.html
@@ -611,7 +611,7 @@
       <div class="inner clearfix">
 
         <!-- Header -->
-        <h1 class="header section-title">CATHOLICS IN THE BAY COLONY</h1>
+        <h1 class="header section-title">ESTABLISHMENT / CATHOLICS IN THE BAY COLONY</h1>
         <!-- Header Text -->
         <p class="text-bold t-center light animated" data-animation="fadeIn" data-animation-delay="200">
           While the Massachusetts Bay Colony was famously established by English Protestants, there is evidence of Catholic influence in the New England area as early as the 17th century. Starting in 1603, French colonists established settlements at the St. Croix River and explored as far south as Cape Cod.
@@ -622,8 +622,16 @@
           </span>
         <p>
          Ultimately, the majority of French immigrants settled further north in Canada, but these early ties to New England would set the stage for future relationships in the Catholic community.</p>
-          <p>The Irish also had a small early presence in New England, long before the first major wave of Irish immigration, thanks to trans-Atlantic maritime trade. During the 17th and 18th centuries, while there was little direct trade between Ireland and New England, ports in both places served as centers of trade and convenient stops for ships bound elsewhere. No major Irish settlements appeared in New England at this time, but Irish Catholic sailors found themselves scattered up and down the coast. In addition, many Irish immigrated to America after the unsuccessful rebellion of 1798, when they fled Ireland out of fear of reprisal or punishment by the British government, including being transported as convicts to Australia.
-        </p>
+          <p>The Irish also had a small early presence in New England, long before the first major wave of Irish immigration, thanks to trans-Atlantic maritime trade. During the 17th and 18th centuries, while there was little direct trade between Ireland and New England, ports in both places served as centers of trade and convenient stops for ships bound elsewhere. No major Irish settlements appeared in New England at this time, but Irish Catholic sailors found themselves scattered up and down the coast. In addition, many Irish immigrated to America after the unsuccessful rebellion of 1798, when they fled Ireland out of fear of reprisal or punishment by the British government, including being transported as convicts to Australia.</p>
+        <p>It was not easy being Catholic in the Massachusetts Bay Colony. The Puritans came to reside in Boston, Salem, and the surrounding area by 1630, and they brought with them strong anti-Catholic sentiment. They objected to the perceived corruption and ostentatious pageantry of the Catholic Church back in Europe, and they especially distrusted any hint of allegiance to the Pope.</p>
+        <span class="floated-box f-right">
+            <img src="https://upload.wikimedia.org/wikipedia/commons/7/7e/Witchcraft_at_Salem_Village.jpg" alt="Salem Witch Trials"/>
+        <span class="image-caption-content t-center">This 1876 illustration depicts the infamous Salem Witch Trials. Anne Glover was the last person to be hanged in Boston as a witch in 1688.</span>
+        </span>
+<p>In 1647, a law was passed banning any Catholic priests from practicing in the colony on pain of death. While no priests were ever put to death under this law, prejudicial feelings were strong, especially towards lower class Irish Catholics in the community. One Irish woman, Ann Glover, was hanged as a witch in Boston in 1688; records suggest that she was targeted because she could only speak Irish Gaelic and Latin, and would not renounce her Catholic faith.</p>
+<p>The American Revolution marked a gradual shift in attitudes, spurred on by political necessity. As the colonies attempted to unite and overthrow British rule, support from France and French Canada became crucial, and open disdain for Catholicism among the people threatened to disrupt these alliances. At the time, however, anti-papist traditions were in full swing. Boston celebrated an annual event known as Pope Night, an offshoot of England's Guy Fawkes Day, during which mobs swarmed the streets and a Pope effigy was burned on Boston Common. In 1775, George Washington himself put a stop to these proceedings, feeling that such a display would insult those whose aid he was courting. The tradition carried on for two years after, but ultimately ended when France's aid in the Revolutionary War proved essential.</p>
+<p>After the war, while anti-Catholic prejudice was far from over, its vehemence tapered off. The Massachusetts constitution was amended to allow Catholics to practice their faith in 1780. With this, the door to truly establishing the Catholic Church in Massachusetts was opened—it was only a matter of who and when.</p>
+        
       </div>
       <!-- End Catholic in the Bay colony Inner -->
       <div class="seperator"></div>
