--- a/index.html
+++ b/index.html
@@ -611,7 +611,7 @@
       <div class="inner clearfix">
 
         <!-- Header -->
-        <h1 class="header section-title">ESTABLISHMENT / CATHOLICS IN THE BAY COLONY</h1>
+        <h1 class="header section-title">[PRE-ESTABLISHMENT] / CATHOLICS IN THE BAY COLONY</h1>
         <!-- Header Text -->
         <p class="text-bold t-center light animated" data-animation="fadeIn" data-animation-delay="200">
           While the Massachusetts Bay Colony was famously established by English Protestants, there is evidence of Catholic influence in the New England area as early as the 17th century. Starting in 1603, French colonists established settlements at the St. Croix River and explored as far south as Cape Cod.
@@ -1488,7 +1488,7 @@
     </section>
     <!--End Catholic Church Section-->
 
-    <!--Resistance to Catholicism Section-->
+    <!--Resistance to Catholicism Section
     <section id="resistance-catholicism" class="container">
 
         <p class="text-bold t-center">It wasn't easy being Catholic in the Massachusetts Bay Colony.</p>
@@ -1502,10 +1502,9 @@
         <p>At the time, however, anti-papist traditions were in full swing. <span class="underline">Boston celebrated an annual event known as Pope Night, an offshoot of England's Guy Fawkes Day, during which mobs swarmed the streets and a Pope effigy was burned on Boston Common</span>. In 1775, George Washington himself put a stop to these proceedings, feeling that such a display would insult those whose aid he was courting. The tradition carried on for two years after, but ultimately ended when France's aid in the Revolutionary War proved essential.</p>
         <p>After the war, while anti-Catholic prejudice was far from over, its vehemence tapered off. The Massachusetts constitution was amended to allow Catholics to practice their faith in 1780. With this, the door to truly establishing the Catholic Church in Massachusetts was opened—it was only a matter of who and when.</p>
       </div>
-      <!-- End of Resistance to Catholicism Inner -->
       <div class="seperator"></div>
     </section>
-
+    -->
     <!--End of Resistance to Catholicism Section-->
 
 
