--- a/index.html
+++ b/index.html
@@ -60,11 +60,11 @@
             <ul class="nav uppercase normal">
               <!--<li class="dropdown-toggle nav-toggle"><a href="#" class="">Home</a></li>-->
               <li class="dropdown-toggle nav-toggle"><a href="#introduction" class="" title ="Introduction" name="introduction">Introduction</a></li>
-              <li class="dropdown-toggle nav-toggle"><a href="#catholic-bay" class="" title="Catholic in the Bay Nation" name="catholic-bay">Bay Nation</a></li>
-              <li class="dropdown-toggle nav-toggle"><a href="#catholic-church" class="" title="Catholic Church" name="catholic-church">Catholic Church</a></li>
-              <li class="dropdown-toggle nav-toggle"><a href="#resistance-catholicism" class="" title="Resistance to Catholism" name="resistance-catholicism">Resistance</a></li>
-              <li class="dropdown-toggle nav-toggle"><a href="#establishment" class="" title="Establishment" name="establishment">Establishment</a></li>
-              <li class="dropdown-toggle nav-toggle"><a href="#growth" class="" title="Growth" name="growth">Growth</a></li>
+              <li class="dropdown-toggle nav-toggle"><a href="#catholic-bay" class="" title="Catholic in the Bay Nation" name="catholic-bay">Among the Puritans</a></li>
+              <li class="dropdown-toggle nav-toggle"><a href="#catholic-church" class="" title="Catholic Church" name="catholic-church">Interactive Timeline</a></li>
+              <!-- <li class="dropdown-toggle nav-toggle"><a href="#resistance-catholicism" class="" title="Resistance to Catholism" name="resistance-catholicism">Resistance</a></li> -->
+              <li class="dropdown-toggle nav-toggle"><a href="#establishment" class="" title="Establishment" name="establishment">Establishment and Resistance</a></li>
+              <li class="dropdown-toggle nav-toggle"><a href="#growth" class="" title="Growth" name="growth">Growth and Integration</a></li>
               <li class="dropdown-toggle nav-toggle"><a href="#legacy" class="" title="Legacy" name="legacy">Legacy</a></li>
               <li class="dropdown-toggle nav-toggle"><a href="#resources" class="" title="Resources" name="resources">Resources</a></li>
             </ul>
