--- a/index.html
+++ b/index.html
@@ -60,11 +60,11 @@
             <ul class="nav uppercase normal">
               <!--<li class="dropdown-toggle nav-toggle"><a href="#" class="">Home</a></li>-->
               <li class="dropdown-toggle nav-toggle"><a href="#introduction" class="" title ="Introduction" name="introduction">Introduction</a></li>
-              <li class="dropdown-toggle nav-toggle"><a href="#catholic-bay" class="" title="Catholic in the Bay Nation" name="catholic-bay">Among the Puritans</a></li>
-              <li class="dropdown-toggle nav-toggle"><a href="#catholic-church" class="" title="Catholic Church" name="catholic-church">Interactive Timeline</a></li>
+              <li class="dropdown-toggle nav-toggle"><a href="#catholic-bay" class="" title="Catholic in the Bay Nation" name="catholic-bay">Persecution</a></li>
+              <li class="dropdown-toggle nav-toggle"><a href="#catholic-church" class="" title="Catholic Church" name="catholic-church">Timeline</a></li>
               <!-- <li class="dropdown-toggle nav-toggle"><a href="#resistance-catholicism" class="" title="Resistance to Catholism" name="resistance-catholicism">Resistance</a></li> -->
-              <li class="dropdown-toggle nav-toggle"><a href="#establishment" class="" title="Establishment" name="establishment">Establishment and Resistance</a></li>
-              <li class="dropdown-toggle nav-toggle"><a href="#growth" class="" title="Growth" name="growth">Growth and Integration</a></li>
+              <li class="dropdown-toggle nav-toggle"><a href="#establishment" class="" title="Establishment" name="establishment">Establishment</a></li>
+              <li class="dropdown-toggle nav-toggle"><a href="#growth" class="" title="Growth" name="growth">Growth</a></li>
               <li class="dropdown-toggle nav-toggle"><a href="#legacy" class="" title="Legacy" name="legacy">Legacy</a></li>
               <li class="dropdown-toggle nav-toggle"><a href="#resources" class="" title="Resources" name="resources">Resources</a></li>
             </ul>
@@ -611,7 +611,7 @@
       <div class="inner clearfix">
 
         <!-- Header -->
-        <h1 class="header section-title">[PRE-ESTABLISHMENT] / CATHOLICS IN THE BAY COLONY</h1>
+        <h1 class="header section-title">PERSECUTION IN THE BAY COLONY</h1>
         <!-- Header Text -->
         <p class="text-bold t-center light animated" data-animation="fadeIn" data-animation-delay="200">
           While the Massachusetts Bay Colony was famously established by English Protestants, there is evidence of Catholic influence in the New England area as early as the 17th century. Starting in 1603, French colonists established settlements at the St. Croix River and explored as far south as Cape Cod.
@@ -645,7 +645,7 @@
       <div class="inner clearfix">
 
         <!-- Header -->
-        <h1 class="header section-title">Growth of the Catholic Church in Greater Boston</h1>
+        <h1 class="header section-title">TIMELINE OF THE EARLY CHURCH IN GREATER BOSTON</h1>
         <p class="text-bold t-center light animated" data-animation="fadeIn" data-animation-delay="200">Drag along the timeline to see the parish growth in Greater Boston from the earliest records through 1900. Zoom in on the map and click each gold pointer on the map to see more aboutindividual parishes. Explore the slideshow to see more detail about key moments in the history of the Boston Catholic community.</p>
         <!--Catholic church block Area-->
 
@@ -1515,7 +1515,7 @@
       <div class="inner clearfix">
 
         <!-- Header -->
-        <h1 class="header section-title">Establishment</h1>
+        <h1 class="header section-title">ESTABLISHMENT AND RESISTANCE</h1>
 
         <p class="text-bold t-center">By the end of the 18th century, Catholics of various ethnicities were spread widely around New England, but there were very few priests and no centralized church to lead them. At this time the only American archdiocese was in Baltimore—it encompassed the entire eastern seaboard, including the cities of New York, Philadelphia, and Boston. In response to this lack of leadership, the French Catholics decided to step back in. [choice of words might be too aggressive here?</p>
         <p>Father Francis Anthony Matignon was a refugee of France's own Revolution, but when he came to New England in 1792, he became an essential figure in Boston's Catholic community. His work in Boston was that of a missionary. He was sent there at the request of Baltimore's Bishop Carroll, in the hopes that his influence could help settle cultural differences between Boston's Catholics and create a unified congregation.</p>
@@ -1562,7 +1562,7 @@
       <div class="inner clearfix">
 
         <!-- Header -->
-        <h1 class="header section-title">Growth of the church</h1>
+        <h1 class="header section-title">GROWTH AND INTEGRATION</h1>
 
         <p class="text-bold t-center">As Boston's Catholic population grew, so did the prominence and power of the church—but prejudice still ran deep in the city.</p>
         <p>Over time, anti-Catholic sentiment evolved further away from its roots in the Protestant Reformation, and came to serve more and more as an excuse for xenophobia and classism.</p>
@@ -1582,7 +1582,7 @@
         <div class="button-wrapper">
           <button class="slideshow-btn btn site-button">
             <span class="btn-value btn-value-left">READ MORE: Faith and Industry</span>
-            <i class="glyphicon glyphicon-th-list btn-icon btn-right" aria-hidden="true"></i>
+            <i class="glyphicon glyphicon-th-list btn-icon btn-left" aria-hidden="true"></i>
           </button>
           <!--<a href="#" class="flash-btn">READ MORE: Faith and Industry</a>-->
         </div>
@@ -1614,7 +1614,7 @@
       <div class="inner clearfix">
 
         <!-- Header -->
-        <h1 class="header section-title">A Lasting Legacy</h1>
+        <h1 class="header section-title">A LASTING LEGACY</h1>
 
         <p class="text-bold t-center">In 1828, after Bishop Cheverus stepped down from his position, Bishop Benedict Joseph Fenwick became the first non-French leader of the Boston diocese.</p>
         <p>As a missionary and a cultural outsider, Cheverus had been focused on propagation and conversion; Fenwick instead focused on uniting the existing Catholic community and smoothing over relations with Boston as a whole.</p>
@@ -1638,7 +1638,9 @@
       <div class="inner clearfix">
 
         <!-- Header -->
-        <h1 class="header section-title">Resources</h1>
+        <h1 class="header section-title">RESOURCES AND FURTHER DISCOVERY</h1>
+        <p>HERE WOULD BE A REALLY GREAT PLACE TO ENCOURAGE PEOPLE TO CHECK OUT OUR LIBRARY AND ARCHIVES!</p>
+       
         <ul class="resoures-list">
           <li>History of the Archdiocese of Boston http://www.bostoncatholic.org/About-The-BeArchdiocese/Content.aspx?id=11570</li>
           <li>Lord, Robert H. et al. History of the Archdiocese of Boston in the Various Stages of Its Development, 1604 to 1943.</li>
