--- a/index.html
+++ b/index.html
@@ -1530,7 +1530,7 @@
 
         <div class="button-wrapper">
           <button class="slideshow-btn btn site-button">
-            <span class="btn-value btn-value-left">NEWS FLASH! Boston Protestants Burn Convent</span>
+            <span class="btn-value btn-value-left">Read More: Rumors and Riots at the Charlestown Convent</span>
             <i class="glyphicon glyphicon-th-list btn-icon btn-right" aria-hidden="true"></i>
           </button>
           <!--<a href="#" class="flash-btn">NEWS FLASH! Boston Protestants Burn Convent</a>-->
@@ -1539,7 +1539,7 @@
         <article class="section-article">
           <section class="article-title"><h1></h1></section>
           <section class="article-image">
-            <img src="images/article-image.jpg" alt="Article Image"/>
+            <img src="images/article-image.jpg" alt="Article Image"/ height="50%" width="50%">
           </section>
           <section class="article-content">
             <p>Late on the night of August 11th, 1834, an estimated fifty to a hundred men on a supposed rescue mission stormed the grounds of the Ursuline Convent in Charlestown, Massachusetts, now part of modern-day Somerville. The mob had been riled by rumors that a "mysterious woman" was being held captive by the nuns after one of the Sisters visited with a protestant family and expressed doubts that she later retracted. In the riots that ensued, the mob set fires, broke down doors and windows, and ransacked the building. The firemen called to the scene joined with spectators instead of intervening. The following night, on August 12th, a crowd returned and further destroyed the orchards, gardens, and fences.</p>
