--- a/index.html
+++ b/index.html
@@ -1541,7 +1541,7 @@
           <section class="article-content">
              <span class="floated-box f-left">
                <img src="images/article-image.jpg" alt="The Ursuline Convent at Charlestown"/>
-               <span class="image-caption-content t-center">A painting of the convent buildings and grounds, including the Merrimack Canal in the foreground, as they appeared before their destruction. Image courtesy of the Medford Historical Society.</span>
+               <span class="image-caption-content t-center">A painting of the convent buildings and grounds as they appeared before their destruction. Image courtesy of the Medford Historical Society.</span>
               </span>
               <p>Late on the night of August 11th, 1834, an estimated fifty to a hundred men on a supposed rescue mission stormed the grounds of the Ursuline Convent in Charlestown, Massachusetts, now part of modern-day Somerville. The mob had been riled by rumors that a "mysterious woman" was being held captive by the nuns after one of the Sisters visited with a Protestant family and expressed doubts that she later retracted. In the riots that ensued, the mob set fires, broke down doors and windows, and ransacked the building. The firemen called to the scene joined with spectators instead of intervening. The following night, on August 12th, a crowd returned and further destroyed the orchards, gardens, and fences.</p>
               <span class="floated-box f-right">
@@ -1549,6 +1549,10 @@
                <span class="image-caption-content t-center">A Harper's Weekly political cartoon from the 1800s shows crocodiles dressed as Catholic clergy threatening American school children.</span>
               </span>
               <p>Anti-Catholic sentiments ran high in early New England, even after practice of the faith was made legal in the 1780s. Rumors that the Ursuline Convent, which also housed a school for girls, were holding residents against their will were fueled by a convergence of prejudice and paranoia. Old pains from Reformation-era Europe carried over into colonial fears that the Pope would influence American politics. Most of the students at the school were from wealthy Protestant families, and the working-class Protestant rioters feared what they saw as a conspiracy between their economic and religious antagonists. Xenophobia was also a factor, as many Catholic immigrants to the United States came from different national and ethnic backgrounds than the Anglo-Saxon settlers.</p>
+              <span class="floated-box f-left">
+               <img src="images/Ursuline_flames.jpg" alt="The Ursuline Convent at Charlestown"/>
+               <span class="image-caption-content t-center">A depiction of the convent in flames during the riots.</span>
+              </span>
               <p>The city of Boston officially condemned the actions of the rioters at the Ursuline Convents, although of the thirteen men arrested, all were acquitted except one who was later pardoned. Most of the nuns dispersed to Quebec. Without insurance or sufficient remittance to rebuild, the ruins sat unchanged for fifty years afterwards, in stark contrast to the nearby Bunker Hill Monument built in the 1840s. The land was eventually leveled and developed for housing, but a few stones from the ruins were repurposed for a vestibule archway in Boston's Cathedral of the Holy Cross.</p>
           </section>
         </article>
